Implemented Hashcode and equals according to the specification.